# ghostwatch

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  ghostwatch.yaml  pyproject.toml
.github/workflows/: ci.yml
api/: config.py  main.py
api/routers/: analytics.py  projects.py  satellite.py
api/services/: data_service.py  satellite_service.py  tile_service.py
data/classification/: flood_control.csv
data/showcase/: verifications.json
docs/: DATA.md  philippine-open-data-sources.md  satellite-analysis.md
docs/data-sources/: global-infrastructure-data.md
docs/demo/: dashboard_raw.webm  hero_raw.webm
ghostwatch/: __init__.py  cli.py  config.py
ghostwatch/adapters/: base.py  csv_generic.py  philippines.py
ghostwatch/core/: classifier.py  collector.py  exporter.py  indices.py
scripts/: bake_bridges.py  bake_projects.py  bake_satellite.py  bake_wayback.py  calibrate_classifier.py  generate_demo_tiles.py  generate_demo_verifications.py  sample_inspect.py  validate_data.py
tests/: test_api.py  test_bake_projects.py  test_bake_wayback.py  test_classifier.py  test_data_contract.py  test_indices.py
web/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vercel.json
web/public/data/: cases.json  charts.json  manifest.json  overview.json  wayback.json
web/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  opengraph-image.alt.txt  page.tsx
web/src/lib/: api.ts  constants.ts  lang.tsx
(+14 files in other folders)
